--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -163,7 +163,8 @@
 
   &__title {
     font-family: "Bricolage Grotesque", sans-serif;
-    font-size: clamp(3.5rem, 12vw, 8rem);
+    // font-size: clamp(3.5rem, 12vw, 8rem);
+    font-size: clamp(2.2rem, 12vw, 8rem);
     font-weight: 800;
     letter-spacing: -0.03em;
     line-height: 0.9;
